--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ include(CTest)
 include(FindPkgConfig)
 enable_testing()
 
-add_executable(sfml_game src/main.cpp)
+include_directories(include)
+add_executable(sfml_game src/main.cpp src/Game.cpp)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
