--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,10 @@ include(FindPkgConfig)
 enable_testing()
 
 include_directories(include)
-add_executable(sfml_game src/main.cpp src/Game.cpp)
+
+file(GLOB game_src "src/*/*.cpp" "src/main.cpp")
+
+add_executable(sfml_game ${game_src})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
@@ -15,6 +18,7 @@ pkg_check_modules(SFML REQUIRED sfml-window sfml-system sfml-graphics)
 
 target_link_libraries(sfml_game PUBLIC ${SFML_LINK_LIBRARIES})
 target_include_directories(sfml_game PUBLIC ${SFML_INCLUDE_DIRS})
+target_include_directories(sfml_game PUBLIC /usr/local/include)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
