--- a/src/settings.toml
+++ b/src/settings.toml
@@ -1,10 +1,28 @@
 title = "SuperColdSettings"
 
 [player]
-speed = 150.0
-run_speed = 350.0
+speed              = 150.0
+run_speed          = 350.0
+
+[tilemap]
+size               = [10, 10]
 
 [sprites]
-world = {path = "../src/Assets/my_tileset.jpg", size = [8, 8]}
-another_world = {path = "../src/Assets/floor_tileset.png", size = [8, 8]}
-player = {path = "../src/Assets/player2.png", size = [16, 16]}
+world              = {path = "../src/Assets/my_tileset.jpg",          size = [8, 8]}
+another_world      = {path = "../src/Assets/floor_tileset.png",       size = [8, 8]}
+old_player         = {path = "../src/Assets/player2.png",             size = [16, 16]}
+player_run_forward = {path = "../src/Assets/player_run_forward.png",  size = [18, 18]}
+player_run_back    = {path = "../src/Assets/player_run_back.png",     size = [18, 18]}
+player_run_left    = {path = "../src/Assets/player_run_left.png",     size = [18, 18]}
+player_run_right   = {path = "../src/Assets/player_run_right.png",     size = [18, 18]}
+player_forward     = {path = "../src/Assets/player_forward.png",      size = [18, 18]}
+player_back        = {path = "../src/Assets/player_back.png",         size = [18, 18]}
+player_left        = {path = "../src/Assets/player_left.png",         size = [18, 18]}
+player_right       = {path = "../src/Assets/player_right.png",        size = [18, 18]}
+
+[tileindex]
+floor              = [0, 0]
+floor_shadow_left  = [0, 1]
+floor_shadow_top   = [0, 2]
+floor_shadow_right = [0, 3]
+wall               = [0, 4]
