--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(sfml_game ${game_src})
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
 
-pkg_check_modules(SFML REQUIRED sfml-window sfml-system sfml-graphics)
+pkg_check_modules(SFML REQUIRED sfml-window sfml-system sfml-graphics sfml-audio)
 
 target_link_libraries(sfml_game PUBLIC ${SFML_LINK_LIBRARIES})
 target_include_directories(sfml_game PUBLIC ${SFML_INCLUDE_DIRS})
