--- a/src/settings.toml
+++ b/src/settings.toml
@@ -1,12 +1,15 @@
 title = "SuperColdSettings"
 
+# Настройки игрока
 [player]
 speed              = 150.0
 run_speed          = 350.0
 
+# Количество тайлов по х и у в текстуре мира
 [tilemap]
 size               = [10, 10]
 
+# Пути и размеры тайлов всех текстур
 [sprites]
 world              = {path = "../src/Assets/my_tileset.jpg",          size = [8, 8]  }
 another_world      = {path = "../src/Assets/floor_tileset.png",       size = [8, 8]  }
@@ -17,6 +20,7 @@ enemy_attack       = {path = "../src/Assets/eye_enemy_attack.png",    size = [41
 enemy_hit          = {path = "../src/Assets/eye_enemy_hit.png",       size = [41, 32]}
 enemy_death        = {path = "../src/Assets/eye_enemy_death.png",      size = [56, 32]}
 
+# Пути и размеры тайлов текстур игрока
 [player_sprites]
 player_run_forward = {path = "../src/Assets/player_run_forward.png",  size = [18, 18]}
 player_run_back    = {path = "../src/Assets/player_run_back.png",     size = [18, 18]}
@@ -27,6 +31,7 @@ player_back        = {path = "../src/Assets/player_back.png",         size = [18
 player_left        = {path = "../src/Assets/player_left.png",         size = [18, 18]}
 player_right       = {path = "../src/Assets/player_right.png",        size = [18, 18]}
 
+# Индексы тайлов
 [tileindex]
 floor              = [0, 0]
 floor_shadow_left  = [0, 1]
@@ -34,11 +39,13 @@ floor_shadow_top   = [0, 2]
 floor_shadow_right = [0, 3]
 wall               = [0, 4]
 
+# Пути до звуков
 [sounds]
 bg_music           = "../src/Assets/music.wav"
 footsteps          = "../src/Assets/footsteps2.wav"
 enemy_hit          = "../src/Assets/enemy_hit.wav"
 
+# Настройки генерации мира
 [world]
 size_multiplyer = 64
 frequency       = 4.0
