--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,10 @@ include_directories(src/Assets)
 
 file(GLOB game_src "src/**/*.cpp" "src/Game/Utils/debug.cpp" "src/main.cpp" "src/settings.toml" "src/external/SimplexNoise/*.cpp")
 
+file(GLOB test_src "src/**/*.cpp" "src/Game/Utils/debug.cpp" "Tests/test.cpp" "src/settings.toml" "src/external/SimplexNoise/*.cpp")
+
 add_executable(sfml_game ${game_src})
+add_executable(game_test ${test_src})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
@@ -19,6 +22,11 @@ pkg_check_modules(SFML REQUIRED sfml-window sfml-system sfml-graphics sfml-audio
 target_link_libraries(sfml_game PUBLIC ${SFML_LINK_LIBRARIES})
 target_include_directories(sfml_game PUBLIC ${SFML_INCLUDE_DIRS})
 target_include_directories(sfml_game PUBLIC /usr/local/include)
+
+target_link_libraries(game_test PUBLIC ${SFML_LINK_LIBRARIES})
+target_include_directories(game_test PUBLIC ${SFML_INCLUDE_DIRS})
+target_include_directories(game_test PUBLIC /usr/local/include)
+target_include_directories(game_test PUBLIC Tests)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
